# crypto_price_prediction

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  quix.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
docker-compose/: Makefile  backfill-pipeline-docker-compose.yml  feature-pipeline-docker-compose.yml  prometheus-grafana-docker-compose.yml  redpandas-docker-compose.yml
docker-compose/prometheus/: prometheus.yml
services/features_dashboard/: .credentials.env  Makefile  pyproject.toml
services/features_dashboard/src/: backend.py  frontend.py
services/features_dashboard/src/settings/: config.py
services/kafka_to_feature_store/: .example.env  Dockerfile  Makefile  app.yaml  pyproject.toml
services/kafka_to_feature_store/src/: main.py
services/kafka_to_feature_store/src/hopswork/: hopswork_api.py
services/kafka_to_feature_store/src/settings/: config.py
services/price_predictor/: Dockerfile  Makefile  MultiLinearRegression_return_predictor.pkl  README.md  app.yaml  pyproject.toml
services/price_predictor/src/: api.py  evaluation.py  feature_engineering.py  main.py  predictor.py  train.py  train_evaluation.py  training.py  utils.py
services/price_predictor/src/configs/: baseline_config.yaml  challenger_config.yaml  config.yaml
services/price_predictor/src/models/: baseline_models.py  shallow_models.py
services/price_predictor/tools/: ohlc_data_reader.py  settings.py
services/processing_trades/: Dockerfile  Makefile  app.yaml  pyproject.toml
services/processing_trades/src/: main.py  processing.py
services/processing_trades/src/configs/: config.yaml  tick_imbalance_config.yaml
services/processing_trades/src/finance_data_structures/: base.py  tick_imbalance_bars.py  volume_bars.py
services/processing_trades/src/settings/: config.py
services/processing_trades/src/utils/: twitter_snowflake.py
services/tools/: pyproject.toml
services/tools/tools/: logging_config.py
services/trade_producer/: .example.env  Dockerfile  Makefile  app.yaml  pyproject.toml
services/trade_producer/src/: main.py
services/trade_producer/src/api/: base.py  base_rest.py  base_websocket.py  coinbase.py  kraken_api.py  trade.py
services/trade_producer/src/api/coinbase/: websocket.py
services/trade_producer/src/api/kraken/: rest.py  websocket.py
services/trade_producer/src/configs/: config.yaml  logger_config.py
services/trade_producer/src/monitoring/: monitoring_metrics.py
services/trade_producer/src/settings/: config.py
services/trade_producer/src/utils/: config.py  helpers.py  logging_config.py
tools/: README.md  pyproject.toml
tools/tools/: ohlc_data_reader.py  settings.py
