[tool.poetry]
name = "tools"
version = "0.1.0"
description = ""
authors = ["Diogo Matias <diogo.pomatias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
hopsworks = "==4.1.*"
loguru = "^0.7.2"
pydantic-settings = "^2.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
